Fixes #928 readviewer ï on next word and #963 Physical line wrapped alignment

--- a/viewer/css/readviewer.css
+++ b/viewer/css/readviewer.css
@@ -323,6 +323,11 @@ body.showTOC .tocNavPanel {
 .lineHeader {
   font-weight: bold;
   padding-right: 15px;
+  display: table-cell;
+}
+
+.physicalLineWrapperDiv {
+  display: table-cell;
 }
 
 .textEdnButton {
